--- a/example/index.html
+++ b/example/index.html
@@ -10,26 +10,24 @@
 
   <link href="index.css" rel="stylesheet" />
 
-  <script src="https://fb.me/react-with-addons-0.12.0.js"></script>
-  <script src="https://fb.me/JSXTransformer-0.12.0.js"></script>
+  <script src="https://fb.me/react-with-addons-0.12.1.js"></script>
+  <script src="https://fb.me/JSXTransformer-0.12.1.js"></script>
 
   <script src="HelloWorld.js"></script>
 
 </head>
 <body>
 
-  <h1>Hello World Example</h1>
+  <h1>Example</h1>
 
-  <div class="example">
-    <h2>HelloWorld</h2>
-    <div id="react-example-1"></div>
-    <script type="text/jsx">
+  <div id="helloWorldExample"></div>
+
+  <script type="text/jsx">
     React.render(
       <HelloWorld />,
-      document.getElementById('react-example-1')
+      document.getElementById('helloWorldExample')
     );
-    </script>
-  </div>
+  </script>
 
 </body>
 </html>
